// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag delete event test 1`] = `
<div>
  <span
    class="ofa-tag test-ref"
  >
    Tag delete function Test
    <span
      class="ofa-tag-delete-icon"
    />
  </span>
</div>
`;

exports[`Tag props test 1`] = `
<div>
  <span
    class="ofa-tag test-component ofa-tag--primary"
    style="background-color: blue; width: 10%; height: 30px;"
  >
    Tag normal props test
  </span>
</div>
`;
